--- a/Lesson_2.ipynb
+++ b/Lesson_2.ipynb
@@ -13,18 +13,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.12.4' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'c:/Users/ivank/AppData/Local/Programs/Python/Python312/python.exe -m pip install ipykernel -U --user --force-reinstall'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "монет_в_день = 5\n",
     "дней_в_году = 365\n",
@@ -63,22 +52,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'int'>\n",
-      "<class 'float'>\n",
-      "<class 'str'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(type(1))               # Целочсиленный тип данных от слова integer - целое число\n",
-    "print(type(1.2))             # Числа с плавающей запятой  от слова float - плавающий\n",
+    "print(type(1.0))             # Числа с плавающей запятой  от слова float - плавающий\n",
     "print(type(\"Это строка\"))    # Строковый тип данных от слова string - строка"
    ]
   },
@@ -91,20 +70,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "3.0\n",
-      "2.0\n",
-      "2.5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(1 + 2)\n",
     "print(1.0 + 2.0)\n",
@@ -128,18 +96,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Привет, мир!\n",
-      "Привет, пользователь 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Привет, \" + \"мир!\")\n",
     "print(\"Привет, пользователь \" + 1)"
@@ -156,22 +115,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello world\n",
-      "Hello, Hello, Hello, \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Место для решения задачи 1.1\n",
-    "print(\"Hello \" + \"world\")\n",
-    "print(\"Hello, \" * 3)"
+    "#Место для решения задачи 1.1 "
    ]
   },
   {
@@ -185,17 +133,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'str'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(type(input()))"
    ]
@@ -211,17 +151,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1825\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Место для решения задачи 2.3 \n",
     "монет_в_день = int(input(\"Сколько монет в день вы получаете?\"))\n",
@@ -241,23 +173,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "За год вы заработаете 1825 монет\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Место для решения задачи 2.4\n",
-    "монет_в_день = int(input(\"Сколько монет в день вы получаете?\"))\n",
-    "дней_в_году = 365\n",
-    "\n",
-    "print(\"За год вы заработаете \" + str(монет_в_день*дней_в_году) + \" монет\")"
+    "#Место для решения задачи 2.4"
    ]
   },
   {
@@ -271,32 +191,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ты знаешь про срез!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "фраза = 'не сможешь предсказать мысль!'\n",
-    "print(фраза[20]+фраза[24]+фраза[2]+фраза[18]+фраза[0]+фраза[19]+фраза[7]+фраза[8]+фраза[9]+фраза[2]+фраза[11]+фраза[12]+фраза[5]+фраза[2]+фраза[3]+фраза[12]+фраза[13]+фраза[18]+фраза[28])"
+    "фраза = 'не сможешь предсказать мысль!'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Птиццаa\n"
+      "Птицa\n"
      ]
     }
    ],
@@ -315,35 +226,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Привет, Сергей! Спосибо большок за пргорамму!\n",
-      "Привет, Сергей! Спасибо большок за пргорамму!\n",
-      "Привет, Сергей! Спасибо большое за пргорамму!\n",
-      "Привет, Сергей! Спасибо большое за программу!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "сообщение = \"риет, Сергей! Спосибо большок за пргорамму!\"\n",
     "\n",
-    "# print(сообщение[0])                                   #Вывод символа по индексу\n",
+    "print(сообщение[0])                                   #Вывод символа по индексу\n",
     "\n",
-    "# print(сообщение[2:])                                  #Вывод среза строки\n",
+    "print(сообщение[2:])                                  #Вывод среза строки\n",
     "сообщение = \"П\" + сообщение[0:2] + \"в\" + сообщение[2:]#Пример исправления строки\n",
     "print(сообщение)\n",
-    "#Нужно самостоятельно исправить оставшееся сообщение\n",
-    "сообщение = сообщение[:18] + \"а\" + сообщение[19:]\n",
-    "print(сообщение)\n",
-    "сообщение = сообщение[:30] + \"е\" + сообщение[31:]\n",
-    "print(сообщение)\n",
-    "сообщение = сообщение[:37] + \"ог\" + сообщение[39:]\n",
-    "print(сообщение)"
+    "#Нужно самостоятельно исправить оставшееся сообщение"
    ]
   },
   {
@@ -357,21 +251,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Привет, мир\n"
-     ]
-    }
-   ],
-   "source": [
-    "текст = \"Привет, мир!\"\n",
-    "print(текст[::-1])"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -384,28 +267,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "slice indices must be integers or None or have an __index__ method",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[43], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m номер \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mВведите номер символа\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      3\u001b[0m символ \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mВведите символ\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 4\u001b[0m слово \u001b[38;5;241m=\u001b[39m \u001b[43mслово\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43mномер\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m+\u001b[39m символ \u001b[38;5;241m+\u001b[39m слово[номер\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m:]\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(слово)\n",
-      "\u001b[1;31mTypeError\u001b[0m: slice indices must be integers or None or have an __index__ method"
-     ]
-    }
-   ],
-   "source": [
-    "слово = input(\"Введите слово\")\n",
-    "номер = int(input(\"Введите номер символа\"))\n",
-    "символ = input(\"Введите символ\")\n",
-    "слово = слово[:номер] + символ + слово[номер+1:]\n",
-    "print(слово)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -424,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
